[tool.poetry]
name = "zbx2kuma"
version = "0.1.0"
description = ""
authors = ["Benoit Deveaux <contact.flapili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
uptime-kuma-api = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
